--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </div>
       <button>Add</button>
     </form>
+    <a href="https://github.com/ilci66">Ilker Akbıyık</a>
   </footer>
 
   <script src='sandbox.js'></script>
