--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
     <a href="https://github.com/ilci66">Ilker Akbıyık</a>
   </footer>
 
-  <script src='sandbox.js'></script>
+  <!-- <script src='sandbox.js'></script> -->
+  <script src='app.js'></script>
 </body>
 </html>
